# freq-folly

./: README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy.yml
ffaa/: Cargo.toml  LICENSE
ffaa/src/: lib.rs
ffs/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
ffs/src/: app.html
ffs/src/lib/components/FreqVis/: FreqVis.svelte
ffs/src/routes/: +page.svelte
ffs/static/: wasm-audio-processor.js
